--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,44 +1,86 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+header h1 {
+  color: rgb(98, 98, 211);
+  font-size: 38px;
+}
+header p {
+  font-size: 20px;
+}
 
-.container{
-    width: 90%;
-    margin: 150px auto;
-    background-color: antiquewhite;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.input {
+  border: none;
+  background-color: inherit;
+  font-size: 16px;
+  margin-left: 5px;
 }
-.card{
-    width: 40%;
-    background-color: white;
-    margin: 1%;
-    border-radius: 11%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
+.input:focus {
+  outline: none;
 }
-.card-image{
-    margin-top: 1px;
-    width: 100%;
-    height: 400px;
-    border-radius: 11% 11% 2% 2%;
+.form-container {
+  padding: 10px;
+  border: 1px solid white;
+  background-color: rgba(121, 108, 173, 0.1);
+  width: 400px;
+  border-radius: 10px;
+
+  margin: 30px auto;
 }
-.image{
-   width: 100%;
-   height: 400px;
-   overflow: hidden;
-   border-radius: 11% 11% 2% 2%;
+.icon {
+  font-size: 20px;
 }
-li{
-    list-style-type: none;
+.container {
+  width: 90%;
+  margin: 50px auto;
+  background-color: antiquewhite;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-.list{
-    margin-top:-10px;
-    text-align: center;
-    font-size: 1.5rem;
+.card {
+  width: 40%;
+  background-color: white;
+  margin: 1%;
+  border-radius: 11%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
 }
-.fruit-name{
-    font-size: 2rem;
-    color: orangered;
+.card-image {
+  margin-top: 1px;
+  width: 100%;
+  height: 400px;
+  border-radius: 11% 11% 2% 2%;
+}
+.image {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  border-radius: 11% 11% 2% 2%;
+}
+li {
+  list-style-type: none;
+}
+.list {
+  margin-top: -10px;
+  text-align: center;
+  font-size: 1.5rem;
+}
+.fruit-name {
+  font-size: 2rem;
+  color: orangered;
 }
