--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,21 +10,21 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 60px;
 }
 header h1 {
   color: rgb(98, 98, 211);
-  font-size: 38px;
+  font-size: 4rem;
 }
 header p {
-  font-size: 20px;
+  font-size: 2rem;
 }
 
 .input {
   border: none;
   background-color: inherit;
-  font-size: 16px;
-  margin-left: 5px;
+  font-size: 1.3rem;
+  /* margin-left: 5px; */
 }
 .input:focus {
   outline: none;
@@ -33,9 +33,8 @@ header p {
   padding: 10px;
   border: 1px solid white;
   background-color: rgba(121, 108, 173, 0.1);
-  width: 400px;
+  width: 40%;
   border-radius: 10px;
-
   margin: 30px auto;
 }
 .icon {
@@ -44,27 +43,27 @@ header p {
 .container {
   width: 90%;
   margin: 50px auto;
-  background-color: antiquewhite;
   padding: 15px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
 }
 .card {
   width: 40%;
-  background-color: white;
+  background-color: rgba(121, 108, 173, 0.1);
   margin: 1%;
-  border-radius: 11%;
+  border-radius: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: start;
+  box-shadow: 3px 5px #d1d0d0;
 }
 .card-image {
   margin-top: 1px;
   width: 100%;
   height: 400px;
-  border-radius: 11% 11% 2% 2%;
+  border-radius: 10px 10px 2% 2%;
 }
 .image {
   width: 100%;
@@ -76,13 +75,15 @@ li {
   list-style-type: none;
 }
 .list {
-  margin-top: -10px;
+  margin-top: 24px;
   text-align: center;
   font-size: 1.5rem;
+  margin-bottom: 36px;
+
 }
 .fruit-name {
   font-size: 2rem;
-  color: orangered;
+  color: rgb(98, 98, 211);
 }
 .loader {
   display: block;
